--- a/Lab3/package.json
+++ b/Lab3/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.4",
+    "cypress": "^14.4.1",
     "tailwindcss": "^4.1.4",
     "vite": "^6.3.3"
   }
